@@ -78,7 +78,7 @@ _libelf_memory(char *image, size_t sz, int reporterror)
 		if (error != ELF_E_NONE) {
 			if (reporterror) {
 				LIBELF_PRIVATE(error) = LIBELF_ERROR(error, 0);
-				(void) _libelf_release_elf(e);
+				_libelf_release_elf(e);
 				return (NULL);
 			}
 		} else {
